--- a/app/map/index.template.html
+++ b/app/map/index.template.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/main.css" type="text/css"/>
     <link rel="stylesheet" href="./css/og.css" type="text/css" />
 
-    <script src="./js/og.js"></script>
+    <script src="./js/og.umd.js"></script>
 
 </head>
 
