--- a/app/wander/index.template.html
+++ b/app/wander/index.template.html
@@ -7,7 +7,7 @@
     <!-- conzept resources -->
     CONZEPT_COMMON_HTML_INCLUDE
 
-    <script src="/app/wander/js/jquery.tubular.1.0.js"></script>
+    <script src="./js/jquery.tubular.1.0.js"></script>
 
     <link rel="stylesheet" href="/app/wander/css/main.css"></link>
 
@@ -33,6 +33,6 @@
 
     </div>
 
-    <script src="/app/wander/js/main.js?version=0.3.10"></script>
+    <script src="./js/main.js?version=0.3.10"></script>
   </body>
 </html>
