--- a/app/wikidata/index.html
+++ b/app/wikidata/index.html
@@ -9,24 +9,24 @@
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
 <!-- conzept resources -->
-<link href="/app/explore2/node_modules/@fortawesome/fontawesome-free/css/all.min.css?v5.14=" rel="stylesheet" type="text/css"> <link  href="/app/explore2/dist/css/conzept/common.css?v0.50.002" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.50.002"></script><script src="/app/explore2/dist/core/utils.js?v0.50.002"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand-arrows-alt"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script>
+<link href="/app/explore2/node_modules/@fortawesome/fontawesome-free/css/all.min.css?v5.14=" rel="stylesheet" type="text/css"> <link  href="/app/explore2/dist/css/conzept/common.css?v0.50.021" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.50.021"></script><script src="/app/explore2/dist/core/utils.js?v0.50.021"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand-arrows-alt"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script>
 
-<script src="../app/explore2/libs/TinyGesture.js"></script>
-<script src="../app/explore2/libs/lc/js/lc_lightbox.lite.js"></script>
-<link rel="stylesheet" href="../app/explore2/libs/lc/css/lc_lightbox.min.css" />
-<link rel="stylesheet" href="../app/explore2/libs/lc/skins/minimal.css" />
-<script src="../app/explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js" async></script>
+<script src="../explore2/libs/TinyGesture.js"></script>
+<script src="../explore2/libs/lc/js/lc_lightbox.lite.js"></script>
+<link rel="stylesheet" href="../explore2/libs/lc/css/lc_lightbox.min.css" />
+<link rel="stylesheet" href="../explore2/libs/lc/skins/minimal.css" />
+<script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js" async></script>
 
 <!--link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Reasonator_logo_proposal.png/16px-Reasonator_logo_proposal.png"-->
 
-<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
+<link href="https://tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://tools-static.wmflabs.org/cdnjs/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="./js/map/theme/default/style.css" />
 <link rel="stylesheet" type="text/css" href="./js/jquery/jquery.cluetip.css" />
 <link rel="stylesheet" type="text/css" href="./main.css" />
-<link rel="stylesheet" type="text/css" href="../app/explore2/dist/css/conzept/theme_dark.css" />
-<link rel="stylesheet" type="text/css" href="../app/explore2/dist/css/conzept/theme_wikipedia_dark.css" />
+<link rel="stylesheet" type="text/css" href="../explore2/dist/css/conzept/theme_dark.css" />
+<link rel="stylesheet" type="text/css" href="../explore2/dist/css/conzept/theme_wikipedia_dark.css" />
 <link rel="stylesheet" type="text/css" href="./extra.css" />
 
 </head>
