--- a/app/wikipedia/index.template.html
+++ b/app/wikipedia/index.template.html
@@ -9,7 +9,7 @@
 
   <link rel="preload" href="/fonts/quicksand/quicksand-v20-latin-ext_latin-regular.woff2" as="font" />
   <link rel="preload" href="/fonts/quicksand/quicksand-v20-latin-ext_latin-500.woff2" as="font" />
-  <link rel="preload" href="/fonts/crimson/CrimsonText-Regular.woff2" as="font" />
+  <!--link rel="preload" href="/fonts/crimson/CrimsonText-Regular.woff2" as="font" /-->
 
   <!-- styles -->
   <style>body { color: #484848; background: #fbfaf9; } </style>
