--- a/app/wander/index.html
+++ b/app/wander/index.html
@@ -5,9 +5,9 @@
     <title>conzept video wander</title>
 
     <!-- conzept resources -->
-    <link href="/app/explore2/node_modules/@fortawesome/fontawesome-free/css/all.min.css?v5.14=" rel="stylesheet" type="text/css"> <link  href="/app/explore2/dist/css/conzept/common.css?v0.50.002" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.50.002"></script><script src="/app/explore2/dist/core/utils.js?v0.50.002"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand-arrows-alt"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script>
+    <link href="/app/explore2/node_modules/@fortawesome/fontawesome-free/css/all.min.css?v5.14=" rel="stylesheet" type="text/css"> <link  href="/app/explore2/dist/css/conzept/common.css?v0.50.021" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.50.021"></script><script src="/app/explore2/dist/core/utils.js?v0.50.021"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand-arrows-alt"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script>
 
-    <script src="/app/wander/js/jquery.tubular.1.0.js"></script>
+    <script src="./js/jquery.tubular.1.0.js"></script>
 
     <link rel="stylesheet" href="/app/wander/css/main.css"></link>
 
@@ -33,6 +33,6 @@
 
     </div>
 
-    <script src="/app/wander/js/main.js?version=0.3.10"></script>
+    <script src="./js/main.js?version=0.3.10"></script>
   </body>
 </html>
