--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -391,6 +391,15 @@ electronic device, we invite you to consult the following link: &nbsp;</span><a 
   <li>By using the Conzept YouTube API clients (video app), users are agreeing to be bound by the terms stated in the <b><a href="https://www.youtube.com/t/terms">YouTube Terms of Service</a></b> and the <b><a href="https://policies.google.com/privacy">Google Terms of Service</a></b>.</li>
 </ul>
 
+<h3>Wikimedia</h3>
+
+<ul>
+  <li>By using the Wikipedia API through the Conzept website, users are agreeing to be bound by the terms stated in the <b><a href="https://foundation.wikimedia.org/wiki/Policy:Privacy_policy">Wikimedia Privacy Policy</a></b>.</li>
+</ul>
+
+
+
+
 
 <p>&nbsp;</p>
 </div>
