--- a/app/eurostat/index.template.html
+++ b/app/eurostat/index.template.html
@@ -20,7 +20,7 @@
   <meta property="og:image" content="https://jsonstat.com/eurostat/esak200.png">
 
   <link href="index_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="index_files/main200.css" rel="stylesheet">
+  <link href="index_files/main.css" rel="stylesheet">
   <link href="index_files/css.css" rel="stylesheet">
 
   <script src="index_files/jsonstat-suite.js?v3.3.0"></script>
@@ -100,7 +100,7 @@ you are looking for.</li>
     <div id="version">v. 2.0.1</div>
   </div>
 
-  <script src="index_files/main201.max.js"></script>
+  <script src="index_files/main.js"></script>
 
   <!-- CONZEPT PATCH -->
   <script>
