--- a/app/wikipedia/index.template.html
+++ b/app/wikipedia/index.template.html
@@ -82,6 +82,7 @@
 </head>
 
 <body id="wikipedia-content" class="js-toc-content">
+  <a id='skip-nav' class='screenreader-text' title="skip to main content" aria-label="skip to main content" href='#main-content'>skip to main content</a>
   <img id="loader" alt="loading" src="../explore2/assets/images/loading.gif?vCONZEPT_VERSION">
 
   <!--script src="../wikipedia/node_modules/klipse/dist/klipse_plugin.min.js"></script-->
