--- a/app/eurostat/index.html
+++ b/app/eurostat/index.html
@@ -7,7 +7,7 @@
   <title>Eurostat JSONstat</title>
 
   <!-- conzept resources -->
-  <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.467" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.467"></script><script src="/app/explore2/dist/core/utils.js?v0.51.467"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
+  <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.466" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.466"></script><script src="/app/explore2/dist/core/utils.js?v0.51.466"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
 
   <script> if ( detectMobile() === true ){ setupSwipe( 'page' ); } setupAppKeyboardNavigation() </script>
 
@@ -20,7 +20,7 @@
   <meta property="og:image" content="https://jsonstat.com/eurostat/esak200.png">
 
   <link href="index_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="index_files/main200.css" rel="stylesheet">
+  <link href="index_files/main.css" rel="stylesheet">
   <link href="index_files/css.css" rel="stylesheet">
 
   <script src="index_files/jsonstat-suite.js?v3.3.0"></script>
@@ -100,7 +100,7 @@ you are looking for.</li>
     <div id="version">v. 2.0.1</div>
   </div>
 
-  <script src="index_files/main201.max.js"></script>
+  <script src="index_files/main.js"></script>
 
   <!-- CONZEPT PATCH -->
   <script>
