new datasource: openalex, updated Wikidata ID fields

--- a/pages/blank.html
+++ b/pages/blank.html
@@ -2,9 +2,9 @@
 <html id="blank-page" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>conzept blank page</title>
-    <script src="./app/explore2/libs/TinyGesture.js"></script>
-    <script src="./app/explore2/dist/core/utils.js"></script>
+    <title>Conzept blank page</title>
+    <script src="/app/explore2/libs/TinyGesture.js"></script>
+    <script src="/app/explore2/dist/core/utils.js"></script>
   </head>
   <body style="background-color: #fbfaf9;">
     <script>
