cover-fetch build option

--- a/app/quiz/location/index.html
+++ b/app/quiz/location/index.html
@@ -13,7 +13,7 @@
         <script type='text/javascript' src='js/roundmap.js'></script>
 
         <!-- conzept resources -->
-        <link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.164" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.164"></script><script src="/app/explore2/dist/core/utils.js?v0.51.164"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script>
+        <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.466" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.466"></script><script src="/app/explore2/dist/core/utils.js?v0.51.466"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
 
         <script>
           // keyboard control
@@ -31,6 +31,7 @@
 
           });
         </script>
+
 
         <script type='text/javascript' src='js/app.js?v0.01'></script>
     </head>
@@ -61,9 +62,7 @@
             <div id='miniMap'></div>
             <div id='guessButton' class="btn btn-large btn-danger"><i class="fa-solid fa-play"></i></div>
             <img id='image' src='' />
-
             <span id="copyright-notice" style="display: inline;"><a id="image-source" title="source" aria-label="source" target="_blank" href="" class="underline"><span class="icon"><i class="fa-regular fa-copyright fa-2x"></i></span></a></span>
         </div>
-
     </body>
 </html>
