--- a/app/quiz/choice/index.html
+++ b/app/quiz/choice/index.html
@@ -3,13 +3,102 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Who painted this?</title>
+    <title>Choice quiz</title>
+
+    <!-- conzept resources -->
+    <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.466" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.466"></script><script src="/app/explore2/dist/core/utils.js?v0.51.466"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
+
+    <script> if ( detectMobile() === true ){ setupSwipe( 'page' ); } setupAppKeyboardNavigation() </script>
+
+    <script src="../../../explore2/libs/lc/dist/js/lc_lightbox.lite.js"></script>
+    <link rel="stylesheet" href="../../../explore2/libs/lc/dist/css/lc_lightbox.css" />
+    <link rel="stylesheet" href="../../../explore2/libs/lc/dist/css/skins/minimal.css" />
+    <script src="../../../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
+
   </head>
   <body>
+
+    <div id="openseadragon" style="display:none; width: 100vw; height: 100vh;"><img id="loader-openseadragon" class="no-enlarge" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 999999; width: 100px; height: 100px;" alt="loading" src="/app/explore2/assets/images/loading.gif"/></div>
+
+    <img id="loader" alt="loading" width="36" height="36" src="../explore2/assets/images/loading.gif"/>
+
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
 
     <script>
+
+    window.setupImageClicks = function(){
+
+      $('img')
+        //.not('.no-enlarge')
+        .attr('loading', 'lazy')
+        .addClass('enlargable');
+
+      // see: https://lcweb.it/lc-lightbox/documentation
+      const LC = lc_lightbox('.elem', {
+        wrap_class: 'lcl_fade_oc',
+        gallery : true,
+        thumb_attr: false, // 'data-lcl-thumb', 
+        tn_hidden: true,
+        thumbs_nav: true,
+        download: true,
+        skin: 'minimal',
+        counter: true,
+        touchswipe: true,
+        //fullscreen: false,
+        //fs_only: true,
+        //on_fs_exit: function(){ console.log('close LC'); close_lb(); }
+      });
+
+    }
+
+    window.setupImageZoom = function(){ // using OpenSeaDragon
+
+      // see: https://openseadragon.github.io/docs/
+      $('#openseadragon').hide;
+
+      window.viewer = OpenSeadragon({
+
+        id: "openseadragon",
+
+        prefixUrl:  + '/app/explore2/node_modules/openseadragon/build/openseadragon/images/',
+
+        tileSources: {
+          type: 'image',
+          url:   + '/app/explore2/assets/images/icon_home.png',
+          crossOriginPolicy: 'Anonymous',
+          ajaxWithCredentials: false,
+          //maxZoomLevel: 10,
+          //maxZoomPixelRatio: 2,
+          //visibilityRatio: 0.2,
+        },
+
+        showNavigator:  true,
+        navigatorSizeRatio: 0.25,
+
+      });
+
+      window.viewer.world.addHandler('add-item', function(event) {
+
+        let tiledImage = event.item;
+
+        tiledImage.addHandler('fully-loaded-change', fullyLoadedHandler);
+
+        window.viewer.navigator.addTiledImage( {
+         tileSource: tiledImage,
+        });
+
+      });
+
+      window.viewer.setVisible(true);
+
+    }
+
+    window.fullyLoadedHandler = function() {
+
+      $('#loader-openseadragon').hide();
+
+    }
 
       window.getParameterByName = function (name, url) {
         if (!url) url = window.location.href;
