--- a/app/quiz/choice/index.template.html
+++ b/app/quiz/choice/index.template.html
@@ -6,7 +6,7 @@
     <title>Choice quiz</title>
 
     <!-- conzept resources -->
-    <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.466" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.466"></script><script src="/app/explore2/dist/core/utils.js?v0.51.466"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
+    CONZEPT_COMMON_HTML_INCLUDE
 
     <script> if ( detectMobile() === true ){ setupSwipe( 'page' ); } setupAppKeyboardNavigation() </script>
 
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="../../../explore2/libs/lc/dist/css/skins/minimal.css" />
     <script src="../../../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
 
-    <script type="module" crossorigin src="./assets/index.71203045.js"></script>
-    <link rel="stylesheet" href="./assets/index.b3ffaf3f.css">
   </head>
   <body>
 
@@ -25,7 +23,7 @@
     <img id="loader" alt="loading" width="36" height="36" src="../explore2/assets/images/loading.gif"/>
 
     <div id="app"></div>
-    
+    <script type="module" src="/src/main.js"></script>
 
     <script>
 
@@ -63,11 +61,11 @@
 
         id: "openseadragon",
 
-        prefixUrl:  + '/app/explore2/node_modules/openseadragon/build/openseadragon/images/',
+        prefixUrl: CONZEPT_WEB_BASE + '/app/explore2/node_modules/openseadragon/build/openseadragon/images/',
 
         tileSources: {
           type: 'image',
-          url:   + '/app/explore2/assets/images/icon_home.png',
+          url:  CONZEPT_WEB_BASE + '/app/explore2/assets/images/icon_home.png',
           crossOriginPolicy: 'Anonymous',
           ajaxWithCredentials: false,
           //maxZoomLevel: 10,
