choice app icons, heritage locations map

--- a/app/wikipedia/index.html
+++ b/app/wikipedia/index.html
@@ -62,6 +62,7 @@
   <script src="../explore2/dist/data/indicators.js?v0.225"></script>
   <script src="../explore2/dist/data/countries.js?v0.51.466"></script>
   <script src="../explore2/dist/data/former_countries.js?v0.51.466"></script>
+  <script src="../explore2/dist/data/economic_regions.js?v0.51.466"></script>
   <script src="../explore2/dist/data/tags.js?v0.51.466"></script>
   <script src="../explore2/dist/data/chains.js?v0.51.466"></script>
 
