--- a/app/wikipedia/index.template.html
+++ b/app/wikipedia/index.template.html
@@ -62,6 +62,7 @@
   <script src="../explore2/dist/data/indicators.js?vCONZEPT_INDICATORS_VERSION"></script>
   <script src="../explore2/dist/data/countries.js?vCONZEPT_VERSION"></script>
   <script src="../explore2/dist/data/former_countries.js?vCONZEPT_VERSION"></script>
+  <script src="../explore2/dist/data/economic_regions.js?vCONZEPT_VERSION"></script>
   <script src="../explore2/dist/data/tags.js?vCONZEPT_VERSION"></script>
   <script src="../explore2/dist/data/chains.js?vCONZEPT_VERSION"></script>
 
