add title to linkgraph

--- a/app/links/index.html
+++ b/app/links/index.html
@@ -24,6 +24,8 @@
 
 <body id="app" class="">
 
+  <span id="view-title"></span>
+
   <div id="formbox" class="transparent-blur">
     <button id="random" style="display:none;" type=button title="Random article">
       <i class="icon ion-shuffle"></i>
