--- a/app/links/index.template.html
+++ b/app/links/index.template.html
@@ -24,6 +24,8 @@
 
 <body id="app" class="">
 
+  <span id="view-title"></span>
+
   <div id="formbox" class="transparent-blur">
     <button id="random" style="display:none;" type=button title="Random article">
       <i class="icon ion-shuffle"></i>
@@ -37,7 +39,7 @@
   <div id="container" class="fullscreen"></div>
 
   <script type="text/javascript" src="./js/libs/vis.min.js"> </script>
-  <script type="text/javascript" src="./bundle.js?v0.40.06"></script>
+  <script type="text/javascript" src="./bundle.js?v0.40.10"></script>
 
   <script>
     $(function() {
