--- a/app/query/embed.template.html
+++ b/app/query/embed.template.html
@@ -201,7 +201,7 @@ body {
 a.item-link img {
   vertical-align: middle;
   width: 100%;
-  max-height: 600px;
+  max-width: 120px;
   border-radius: 0.3em;
 }
 
