--- a/app/query/embed.html
+++ b/app/query/embed.html
@@ -203,9 +203,10 @@ body {
 }
 
 a.item-link img {
+  a.item-link img {
   vertical-align: middle;
   width: 100%;
-  max-height: 600px;
+  max-width:  120px !important;
   border-radius: 0.3em;
 }
 
