query style fix

--- a/app/query/embed.html
+++ b/app/query/embed.html
@@ -203,10 +203,10 @@ body {
 }
 
 a.item-link img {
-  a.item-link img {
   vertical-align: middle;
   width: 100%;
   max-width:  120px !important;
+  max-height: 240px !important;
   border-radius: 0.3em;
 }
 
