--- a/app/ideograph/index.template.html
+++ b/app/ideograph/index.template.html
@@ -12,7 +12,7 @@
         <meta property="og:image" content="https://ourednik.info/ideograph/img/ideograph_environmentalism_Asia.jpg"/>
         <meta property="og:description" content="explorer of ideologies and political parties on WikiData"/>      
         <!--link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Maven Pro"-->
-        <link rel="stylesheet" href="main.css"-->
+        <link rel="stylesheet" href="main.css?v001"-->
 
         <!-- conzept resources -->
         CONZEPT_COMMON_HTML_INCLUDE
