subject depictions gallery

--- a/app/commons-sparql/index.html
+++ b/app/commons-sparql/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
     <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
 
-    <script src="src/index.js?v002"></script> 
+    <script src="src/main.js?v003"></script> 
     <script src="src/zooming.js"></script> 
   </head>
 
