--- a/app/gdelt/index.html
+++ b/app/gdelt/index.html
@@ -507,8 +507,8 @@ $( document ).ready(function() {
 
 </script>
 
-<script type="text/javascript" src="responsive.js"></script>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="responsive.js?v001"></script>
+<script type="text/javascript" src="main.js?v001"></script>
 <script type="text/javascript" src="compare.js"></script>
 </body>
 </html>
