--- a/app/table/index.html
+++ b/app/table/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>data table</title>
+  <title>table view</title>
   <link rel='stylesheet' href='./css/materialize.min.css'>
   <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
   <link rel="stylesheet" href="./css/main.css">
@@ -40,7 +40,6 @@
 </div>
 <!-- partial -->
 
-<!--script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script-->
 <script src='./libs/jquery.dataTables.min.js'></script>
 <script src='./libs/materialize.min.js'></script>
 <script  src="./js/main.js"></script>
