--- a/app/taviewer/index.template.html
+++ b/app/taviewer/index.template.html
@@ -49,6 +49,10 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
+    <link rel="stylesheet" type="text/css" href="./static/css/main.9b99a6a8.css"></link>
+    <script src="./static/js/main.7dc5ce15.js"></script>
+
   </body>
 
 </html>
