--- a/app/wikidata/index.template.html
+++ b/app/wikidata/index.template.html
@@ -12,7 +12,7 @@
 CONZEPT_COMMON_HTML_INCLUDE
 
 <!--script src="../explore2/libs/TinyGesture.js"></script-->
-<script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js"></script>
+<script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js" type="module"></script>
 <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css" />
 <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
 <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
