--- a/app/wikipedia/index.template.html
+++ b/app/wikipedia/index.template.html
@@ -49,7 +49,7 @@
   <script src="../explore2/libs/wikibase-sdk.min.js"></script>        <!-- no dist-bundle in the NPM-package: https://www.npmjs.com/package/wikibase-sdk -->
   <script src="../wikipedia/node_modules/tocbot/dist/tocbot.min.js"></script>
 
-  <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js"></script>  <!-- contains some custom code modifications -->
+  <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js" type="module"></script>  <!-- contains some custom code modifications -->
   <script src="../explore2/libs/wikipedia-preview/wikipedia-preview.production.js"></script>
   <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js" async></script>
   <!--script type="module" src="../wikipedia/node_modules/@google/model-viewer/dist/model-viewer.min.js"></script-->
