fix version issue

--- a/app/commons-sparql/index.template.html
+++ b/app/commons-sparql/index.template.html
@@ -15,13 +15,13 @@
 
     <script> if ( detectMobile() === true ){ setupSwipe( 'page' ); } setupAppKeyboardNavigation() </script>
 
-    <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js" type="module"></script>
-    <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css" />
+    <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js?vCONZEPT_VERSION" type="module"></script>
+    <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css?vCONZEPT_VERSION" />
     <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
     <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
 
-    <script src="src/main.js?v003"></script> 
-    <script src="src/zooming.js"></script> 
+    <script src="src/main.js?vCONZEPT_VERSION"></script> 
+    <script src="src/zooming.js?vCONZEPT_VERSION"></script> 
   </head>
 
   <body>
