--- a/app/wikipedia/index.template.html
+++ b/app/wikipedia/index.template.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../explore2/node_modules/jquery.uls/css/jquery.uls.lcd.css" type="text/css">
   <link rel="stylesheet" href="../explore2/node_modules/jquery.uls/css/jquery.uls.mobile.css" type="text/css">
 
-  <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css" />
+  <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css?vCONZEPT_VERSION" />
   <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
 
   <!-- used by klipse code playground -->
@@ -49,7 +49,7 @@
   <script src="../explore2/libs/wikibase-sdk.min.js"></script>        <!-- no dist-bundle in the NPM-package: https://www.npmjs.com/package/wikibase-sdk -->
   <script src="../wikipedia/node_modules/tocbot/dist/tocbot.min.js"></script>
 
-  <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js" type="module"></script>  <!-- contains some custom code modifications -->
+  <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js?vCONZEPT_VERSION" type="module"></script>  <!-- contains some custom code modifications -->
   <script src="../explore2/libs/wikipedia-preview/wikipedia-preview.production.js"></script>
   <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js" async></script>
   <!--script type="module" src="../wikipedia/node_modules/@google/model-viewer/dist/model-viewer.min.js"></script-->
