removed large models, chat app speech input

--- a/app/chat/index.html
+++ b/app/chat/index.html
@@ -383,6 +383,10 @@
               </svg>
             </button>
 
+            <button id="speechInput" onclick="window.micBtnClick()" title="toggle speech input">
+              <span id="microphone-icon"><i class="fa-solid fa-microphone"></i></span>
+            </button>
+
             <button id="clearConv">
               <svg style="margin:0 auto;display:block" role="img" width="20px" height="20px">
                 <title>clear session</title>
