--- a/app/quiz/location-nature/index.template.html
+++ b/app/quiz/location-nature/index.template.html
@@ -18,7 +18,7 @@
 
     <div id="pictureModal" class="pictureModal">
         <img id="modal-content" class="modal-content">
-        <p style="color:aliceblue; text-align: center;">Click image to exit</p>
+        <!--p style="color:aliceblue; text-align: center;">Click image to exit</p-->
     </div>
 
      <h1>iNatGuessr</h1>
