--- a/app/quiz/location-nature/index.html
+++ b/app/quiz/location-nature/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css?v0.10"/>
 
 </head>
 
@@ -18,7 +18,7 @@
 
     <div id="pictureModal" class="pictureModal">
         <img id="modal-content" class="modal-content">
-        <p style="color:aliceblue; text-align: center;">Click image to exit</p>
+        <!--p style="color:aliceblue; text-align: center;">Click image to exit</p-->
     </div>
 
      <h1>iNatGuessr</h1>
@@ -82,6 +82,6 @@
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="src/seedrandom.min.js"></script>
-    <script src="src/main.js"></script>
+    <script src="src/main.js?v0.10"></script>
 </body>
 </html>
