--- a/app/commons-sparql/index.template.html
+++ b/app/commons-sparql/index.template.html
@@ -59,6 +59,8 @@
         <span id="imagesDepicting"> <a id="resultsHeaderLink" href="" target="_blank"></a> </span>
         <br />
         <small><span id="numResults">?</span> <a href="https://commons.wikimedia.org">Wikimedia Commons</a></small>
+        &nbsp;<small><a id="queryLink" title="SPARQL query link" target="_blank" href=""><i class="fa-solid fa-up-right-from-square"></i></a></small>
+
         <br /><br />
       </div>
       <a id="returnToLink" href=""> <button>Return to article</button> </a>
