geo search version

--- a/app/geo-search/index.template.html
+++ b/app/geo-search/index.template.html
@@ -7,7 +7,7 @@
     CONZEPT_COMMON_HTML_INCLUDE
 
     <link rel="stylesheet" href="./node_modules/@openglobus/og/css/og.css" type="text/css">
-    <link rel="stylesheet" href="./css/main.css" type="text/css">
+    <link rel="stylesheet" href="./css/main.css?v0.002" type="text/css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
 <div class="ogConsole" style="display: none;"></div>
 
-<script type="module"  id="og-sandbox-script" src="./src/main.js?v0.001"></script>
+<script type="module"  id="og-sandbox-script" src="./src/main.js?v0.002"></script>
 
 <script>
   // keyboard control
