--- a/app/geo-search/index.template.html
+++ b/app/geo-search/index.template.html
@@ -20,9 +20,10 @@
   <button id="btnMQS" style="float:left; margin: 3px;">SAT</button>
 
   <select name="radius" id="radius">
-    <option value="250">0.25 km</option>
-    <option value="500">0.5 km</option>
-    <option value="1000" selected>1 km</option>
+    <option value="125">125 m</option>
+    <option value="250" selected>250 m</option>
+    <option value="500">500 m</option>
+    <option value="1000">1 km</option>
     <option value="2000">2 km</option>
     <option value="4000">4 km</option>
     <option value="8000">8 km</option>
