--- a/app/table/index.html
+++ b/app/table/index.html
@@ -42,7 +42,7 @@
 
 <script src='./libs/jquery.dataTables.min.js'></script>
 <script src='./libs/materialize.min.js'></script>
-<script  src="./js/main.js"></script>
+<script  src="./src/main.js"></script>
 
 </body>
 </html>
