--- a/app/geo-search/index.template.html
+++ b/app/geo-search/index.template.html
@@ -21,7 +21,7 @@
 
   <select name="radius" id="radius">
     <option value="125">125 m</option>
-    <option value="250 selected">250 m</option>
+    <option value="250" selected>250 m</option>
     <option value="500">500 m</option>
     <option value="1000">1 km</option>
     <option value="2000">2 km</option>
