--- a/app/timespace/index.template.html
+++ b/app/timespace/index.template.html
@@ -92,7 +92,7 @@
   <div id='loading' style="display:none;float:right;background-color:red;color:white;padding:2px">Loading...</div>
   <div id='timeline'></div>
   <div id="mapdiv" style='height:400px'></div>
-  <div id='map_comment'></div>
+  <div id='map_comment' style="display:none;"></div>
   <div id='primary_items_table'></div>
   </div>
 
