--- a/app/map/index.template.html
+++ b/app/map/index.template.html
@@ -8,8 +8,8 @@
     <!-- conzept resources -->
     CONZEPT_COMMON_HTML_INCLUDE
 
-    <link rel="stylesheet" href="./css/main.css" type="text/css"/>
     <link rel="stylesheet" href="./node_modules/@openglobus/og/css/og.css" type="text/css">
+    <link rel="stylesheet" href="./css/main.css?v0.003" type="text/css"/>
 
     <script src="./src/og.umd.js"></script>
     <!--script src="../explore2/libs/wikibase-sdk.min.js"></script-->
